--- a/Frontend/donation_histroy_admin.html
+++ b/Frontend/donation_histroy_admin.html
@@ -52,10 +52,22 @@
         }
 
         .photo-container {
-            max-width: 90%;
-            /* Adjust as needed */
-            margin: 0 auto;
+            width: 50rem;
+            max-height: 20rem;
+            /* Set a fixed height for the photo container */
+            display: flex;
+            justify-content: center;
+            align-items: center;
             overflow: hidden;
+        }
+
+        .photo-container img {
+            max-width: 100%;
+            max-height: 15rem;
+            width: auto;
+            height: auto;
+            object-fit: contain;
+            /* Ensures the image fits within the dimensions */
         }
 
         .photo-tile {
@@ -66,11 +78,13 @@
 
         .tile-photo {
             max-width: 100%;
-            /* Ensures each photo fits within its container */
-            height: auto;
+            /* Ensure each photo fits within its container */
+            height: 30rem;
             /* Maintain aspect ratio */
-            margin-right: 10px;
-            /* Space between photos */
+            display: block;
+            /* Ensure each photo is displayed as a block element */
+            margin: 0 auto;
+            /* Center each photo horizontally */
         }
 
         .bold-label {
